; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/device_handler/extr_scsi_dh.c_device_handler_match.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/device_handler/extr_scsi_dh.c_device_handler_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_device_handler = type { i32 }
%struct.scsi_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.scsi_device_handler* (%struct.scsi_device_handler*, %struct.scsi_device*)* @device_handler_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.scsi_device_handler* @device_handler_match(%struct.scsi_device_handler* %0, %struct.scsi_device* %1) #0 {
  %3 = alloca %struct.scsi_device_handler*, align 8
  %4 = alloca %struct.scsi_device*, align 8
  %5 = alloca %struct.scsi_device_handler*, align 8
  store %struct.scsi_device_handler* %0, %struct.scsi_device_handler** %3, align 8
  store %struct.scsi_device* %1, %struct.scsi_device** %4, align 8
  %6 = load %struct.scsi_device*, %struct.scsi_device** %4, align 8
  %7 = call %struct.scsi_device_handler* @device_handler_match_function(%struct.scsi_device* %6)
  store %struct.scsi_device_handler* %7, %struct.scsi_device_handler** %5, align 8
  %8 = load %struct.scsi_device_handler*, %struct.scsi_device_handler** %3, align 8
  %9 = icmp ne %struct.scsi_device_handler* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load %struct.scsi_device_handler*, %struct.scsi_device_handler** %5, align 8
  %12 = load %struct.scsi_device_handler*, %struct.scsi_device_handler** %3, align 8
  %13 = icmp ne %struct.scsi_device_handler* %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store %struct.scsi_device_handler* null, %struct.scsi_device_handler** %5, align 8
  br label %15

15:                                               ; preds = %14, %10, %2
  %16 = load %struct.scsi_device_handler*, %struct.scsi_device_handler** %5, align 8
  ret %struct.scsi_device_handler* %16
}

declare dso_local %struct.scsi_device_handler* @device_handler_match_function(%struct.scsi_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
